--- a/cubic.html
+++ b/cubic.html
@@ -14,7 +14,7 @@
 	color: #fff;
 	font-family: "Open Sans", sans-serif;
 	font-size: 11px;
-    /* overflow: hidden; */
+    overflow: hidden;
 	}
 
 .title {
@@ -246,15 +246,6 @@
     <div class="container">
       <div class="slide x"></div>
       <div class="slide y"></div>
-      <div class="slide z"></div>
-    </div>
-    <div class="shadow"></div>
-  </div>
-
-  <div class="slider" style="margin: 600px auto 1200px;">
-    <div class="container">
-      <div class="slide x"></div>
-      <!-- <div class="slide y"></div> -->
       <div class="slide z"></div>
     </div>
     <div class="shadow"></div>
